adds to contact adder method